# example-project

./: CMakeLists.txt
cmake/Modules/: ExternalRapidJson.cmake  FindGLEW.cmake  FindSDL2.cmake
data/: jetpackdude.xml  test.json  test.xml  test2.xml
gfx/: CMakeLists.txt  context.cc  obj.cc  spritesheet.cc  system.cc  utils.cc
include/gfx/: context.hpp  obj.hpp  primitives.hpp  spritesheet.hpp  system.hpp  types.hpp  utils.hpp
include/loaders/: image.hpp  obj.hpp  sparrow.hpp
include/math/: vector.hpp
include/posix/: errors.hpp
include/util/: deleter.hpp  file.hpp  filetypes.hpp  format.hpp  io.hpp  logging.hpp  nocopy.hpp  string.hpp
include/util/mswin/: fileimpl.hpp
include/util/posix/: fileimpl.hpp
loaders/: CMakeLists.txt  image.cc  obj.cc  sparrow.cc
posix/: CMakeLists.txt  errors.cc
project1/: CMakeLists.txt  main.cc
skratch/: CMakeLists.txt  application.cc  application.hpp  globals.hpp  input.cc  input.hpp  main.cc
tests/: CMakeLists.txt  test_basic.cc  test_file.cc  test_json.cc
util/: CMakeLists.txt  file.cc  io.cc  logging.cc
util/mswin/: fileimpl.cc
util/posix/: fileimpl.cc
